# simple_player

./: CMakeLists.txt  README.md
src/: AudioDisposeThread.cpp  AudioDisposeThread.h  ReceiveThread.cpp  ReceiveThread.h  VideoDisposeThread.cpp  VideoDisposeThread.h  audio.cpp1  main.cpp
ui/: player.cpp  player.h  player.ui
